--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^6.8.2",
     "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
@@ -23,6 +24,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "pg": "^8.16.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
