--- a/server/package.json
+++ b/server/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "prisma": "prisma",
-    "generate": "prisma generate",
-    "migrate": "prisma migrate dev --name init",
-    "studio": "prisma studio"
-  },
-  "dependencies": {
-    "@prisma/adapter-pg": "^6.8.2",
-    "@prisma/client": "^6.7.0",
-    "bcrypt": "^5.1.1",
-    "cloudinary": "^2.6.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.2",
-    "pg": "^8.16.0",
-    "zod": "^3.24.3"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.15.3",
-    "nodemon": "^3.1.10",
-    "prisma": "^6.7.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "dev": "nodemon --watch src --exec ts-node src/server.ts",
+        "build": "npx tsc",
+        "start": "node dist/server.js",
+        "prisma": "prisma",
+        "generate": "prisma generate",
+        "migrate": "prisma migrate dev --name init",
+        "studio": "prisma studio",
+        "format:check": "prettier . --check",
+        "format": "prettier . --write"
+    },
+    "dependencies": {
+        "@prisma/adapter-pg": "^6.8.2",
+        "@prisma/client": "^6.7.0",
+        "bcrypt": "^5.1.1",
+        "cloudinary": "^2.6.0",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "helmet": "^8.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.2",
+        "pg": "^8.16.0",
+        "zod": "^3.24.3"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/cors": "^2.8.18",
+        "@types/express": "^5.0.1",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/multer": "^1.4.12",
+        "@types/node": "^22.15.3",
+        "nodemon": "^3.1.10",
+        "prettier": "^3.5.3",
+        "prisma": "^6.7.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3"
+    }
 }
